Form validation adjusted to prevent overflow in admin dash

--- a/Vape Shop Customer UI/stylesheet.css
+++ b/Vape Shop Customer UI/stylesheet.css
@@ -425,7 +425,7 @@
   position: absolute;
   left: 7rem;
   top: 4.5rem;
-  padding-left: 1rem;
+  padding-left: 10rem;
   border: 2px solid rgb(68, 89, 233);
   border-radius: 0.8rem;
   box-shadow: 0px 0px 10px rgba(68, 89, 233, 1);
@@ -457,7 +457,7 @@
 
 .cust-info-title {
   position: relative;
-  padding: 0rem 0rem 1rem 10rem;
+  padding: 0rem 0rem 2rem 0rem;
 }
 
 .cust-discount {
@@ -498,6 +498,33 @@
   width: 20rem;
   font-size: 1.2rem;
   text-align: center;
+}
+
+.cust-selection {
+  position: absolute;
+  top: 24rem;
+  left: -38.3rem;
+  height: 10rem;
+  padding: 0.2rem;
+  border: 2px solid rgb(68, 89, 233);
+  border-radius: 0.6rem;
+  box-shadow: 0px 0px 10px rgba(68, 89, 233, 1);
+  width: 60rem;
+  font-size: 1.2rem;
+  text-align: center;
+  /* background-color: white; */
+  color: white;
+  /* display: flex;
+  flex-direction: row; */
+}
+
+.cust-selected {
+  display: inline-block;
+  width: 40%;
+  /* margin: 1rem; */
+  position: relative;
+  word-wrap: break-word;
+  font-size: 1.4rem;
 }
 
 .fa-arrow-right-to-bracket {
